--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
     "@types/sequelize": "^4.28.10",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "joi": "^17.4.2",
     "mysql2": "^2.3.0",
     "passport": "^0.4.1",
@@ -46,6 +49,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/crypto-js": "^4.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
