--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start": "cross-env NODE_ENV=prod nest start",
     "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:pm2": "pm2 start ecosystem.config.js --env development",
-    "ls:pm2":"pm2 ls",
-    "delete:pm2":"pm2 delete BootView",
+    "ls:pm2": "pm2 ls",
+    "delete:pm2": "pm2 delete BootView",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -52,7 +52,7 @@
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/testing": "^8.1.0",
     "@types/crypto-js": "^4.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
@@ -73,6 +73,9 @@
     "typescript": "^4.3.5"
   },
   "jest": {
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
     "moduleFileExtensions": [
       "js",
       "json",
