--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.1.1",
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.1.1",
     "@types/sequelize": "^4.28.10",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -57,6 +59,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
